'notify when available' input, etc.

--- a/assets/application.css.liquid
+++ b/assets/application.css.liquid
@@ -96,6 +96,15 @@
   --btn-bg-hover: var(--secondary-50);
 }
 
+#app .btn--outlined{
+  --btn-text: var(--primary-800);
+  --btn-text-hover: var(--primary-800);
+  --btn-bg: #ffffff;
+  --btn-bg-hover: var(--secondary-200);
+  border-width: 2px;
+  border-color: var(--secondary-200);
+}
+
 /** no background **/
 
 #app .btn--borderless{
@@ -388,15 +397,20 @@ html {
 }
 
 @media screen and (max-width: 1023px){
-  .nav-primary.container{
-    display:none;
+  body.nav-active .nav-primary {
+    transform:translateX(0);
+  }
+
+  .nav-primary.container {
+    transform:translateX(-100%);
+    transition: transform .2s ease;
   }
 
   body.nav-active{
     overflow:hidden;
   }
 
-  body.nav-active .nav-primary.container{
+  body .nav-primary.container{
     display:flex;
     flex-direction: column;
     position:absolute;
@@ -409,8 +423,46 @@ html {
     background-color:white;
   }
 
+  /* may be too generalized? */
+
+  svg path{
+    transform-origin:center;
+  }
+
+  body.nav-active .accordion__trigger_active svg path.vert{
+    transform:rotate(90deg);
+  }
+
+  body.nav-active .accordion__trigger_active svg path.horiz{
+    transform:rotate(180deg);
+  }
+
+  body.nav-active .mobile-toggle svg path:is(.top,.bot),
+    nav.search-mode .mobile-toggle svg path:is(.top,.bot){
+    transform: scale(0);
+  }
+
+  body.nav-active .mobile-toggle svg path.mid1,
+    nav.search-mode .mobile-toggle svg path.mid1{
+    d: path("M2.25 3L23.25 21")
+  }
+
+  body.nav-active .mobile-toggle svg path.mid2,
+    nav.search-mode .mobile-toggle svg path.mid2{
+    d: path("M2.25 21L23.25 3")
+  }
+
+  /* body.nav-active .mobile-toggle svg path.top{
+        d: path("M2.25 3L23.25 21")
+    }
+
+    body.nav-active .mobile-toggle svg path.bot{
+        d: path("M2.25 21L23.25 3")
+    } */
+
   .menu__item.level--1{
     width: 100%;
+    cursor: pointer;
   }
 
   .menu__item.level--1 .menu__link{
@@ -456,6 +508,24 @@ html {
     padding-top: 12px;
     padding-bottom: 24px;
   }
+
+  nav.search-mode .search-hide-mobile{
+    opacity:0;
+    pointer-events:none;
+    display:none;
+  }
+
+  body#app.nav-active .search-mobile{
+    display:flex;
+  }
+
+  body#app.nav-active .search-hide-mobile{
+    display:none;
+  }
+
+  body#app.nav-active .buttons, body#app.nav-active .mobile-toggle{
+    flex-grow:0;
+  }
 }
 
 @media screen and (min-width: 1024px){
@@ -467,6 +537,7 @@ html {
 
   .menu__item.level--1{
     height: 100%;
+    cursor: pointer;
     --tw-text-opacity: 1;
     color: rgb(108 108 108 / var(--tw-text-opacity));
   }
@@ -550,6 +621,11 @@ html {
     --tw-text-opacity: 1;
     color: rgb(108 108 108 / var(--tw-text-opacity));
   }
+
+  nav.search-mode .search-hide{
+    opacity:0;
+    pointer-events:none;
+  }
 }
 
 .dropdown__link--level-1,  .dropdown__link--level-2{
@@ -564,13 +640,8 @@ html {
 
 /* search animation */
 
-nav .search-hide{
+nav .search-hide, nav .search-hide-mobile{
   transition: opacity .3s;
-}
-
-nav.search-mode .search-hide{
-  opacity:0;
-  pointer-events:none;
 }
 
 nav .search{
@@ -728,7 +799,7 @@ input::-webkit-inner-spin-button {
   border-top-width:3px
 }
 
-.faq__accordion .accordion__item:last-child{
+.faq__accordion:last-child .accordion__item:last-child{
   border-bottom-width:3px
 }
 
@@ -790,11 +861,11 @@ svg path{
   transition: 0.2s;
 }
 
-.accordion__trigger_active svg path.left {
+.faq__accordion .accordion__trigger_active svg path.left {
   d: path("M1 1L11 11");
 }
 
-.accordion__trigger_active svg path.right {
+.faq__accordion .accordion__trigger_active svg path.right {
   d: path("M1 11L11 1");
 }
 
@@ -910,14 +981,14 @@ svg path{
   text-align: center;
 }
 
-.inline-link{
+.rich-text a,  .inline-link{
   color: var(--primary-500);
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
 }
 
-.inline-link:hover{
-  color: var(--primary-500);
+.rich-text a:hover,  .inline-link:hover{
+  color: var(--primary-600);
 }
 
 /* purgecss start ignore */
@@ -3457,40 +3528,16 @@ video {
   left: 20px;
 }
 
+#app .right-s2{
+  right: 8px;
+}
+
 #app .left-1\/2{
   left: 50%;
 }
 
 #app .top-1\/2{
   top: 50%;
-}
-
-#app .top-s10{
-  top: 64px;
-}
-
-#app .top-0{
-  top: 0px;
-}
-
-#app .top-s10{
-  top: 64px;
-}
-
-#app .top-0{
-  top: 0px;
-}
-
-#app .top-s10{
-  top: 64px;
-}
-
-#app .top-0{
-  top: 0px;
-}
-
-#app .top-s10{
-  top: 64px;
 }
 
 #app .isolate{
@@ -3523,102 +3570,6 @@ video {
 
 #app .col-span-1{
   grid-column: span 1 / span 1;
-}
-
-#app .col-span-2{
-  grid-column: span 2 / span 2;
-}
-
-#app .col-span-1{
-  grid-column: span 1 / span 1;
-}
-
-#app .col-span-2{
-  grid-column: span 2 / span 2;
-}
-
-#app .col-span-1{
-  grid-column: span 1 / span 1;
-}
-
-#app .col-span-2{
-  grid-column: span 2 / span 2;
-}
-
-#app .col-span-1{
-  grid-column: span 1 / span 1;
-}
-
-#app .col-span-2{
-  grid-column: span 2 / span 2;
-}
-
-#app .col-span-1{
-  grid-column: span 1 / span 1;
-}
-
-#app .col-span-2{
-  grid-column: span 2 / span 2;
-}
-
-#app .col-span-1{
-  grid-column: span 1 / span 1;
-}
-
-#app .col-span-2{
-  grid-column: span 2 / span 2;
-}
-
-#app .col-span-1{
-  grid-column: span 1 / span 1;
-}
-
-#app .row-span-2{
-  grid-row: span 2 / span 2;
-}
-
-#app .row-span-1{
-  grid-row: span 1 / span 1;
-}
-
-#app .row-span-2{
-  grid-row: span 2 / span 2;
-}
-
-#app .row-span-1{
-  grid-row: span 1 / span 1;
-}
-
-#app .row-span-2{
-  grid-row: span 2 / span 2;
-}
-
-#app .row-span-1{
-  grid-row: span 1 / span 1;
-}
-
-#app .row-span-2{
-  grid-row: span 2 / span 2;
-}
-
-#app .row-span-1{
-  grid-row: span 1 / span 1;
-}
-
-#app .row-span-2{
-  grid-row: span 2 / span 2;
-}
-
-#app .row-span-1{
-  grid-row: span 1 / span 1;
-}
-
-#app .row-span-2{
-  grid-row: span 2 / span 2;
-}
-
-#app .row-span-1{
-  grid-row: span 1 / span 1;
 }
 
 #app .row-span-2{
@@ -3667,66 +3618,6 @@ video {
 #app .mx-s5{
   margin-left: 20px;
   margin-right: 20px;
-}
-
-#app .mx-auto{
-  margin-left: auto;
-  margin-right: auto;
-}
-
-#app .mx-s2{
-  margin-left: 8px;
-  margin-right: 8px;
-}
-
-#app .mx-auto{
-  margin-left: auto;
-  margin-right: auto;
-}
-
-#app .mx-s2{
-  margin-left: 8px;
-  margin-right: 8px;
-}
-
-#app .mx-auto{
-  margin-left: auto;
-  margin-right: auto;
-}
-
-#app .mx-s2{
-  margin-left: 8px;
-  margin-right: 8px;
-}
-
-#app .mx-auto{
-  margin-left: auto;
-  margin-right: auto;
-}
-
-#app .mx-s2{
-  margin-left: 8px;
-  margin-right: 8px;
-}
-
-#app .mx-auto{
-  margin-left: auto;
-  margin-right: auto;
-}
-
-#app .mx-s2{
-  margin-left: 8px;
-  margin-right: 8px;
-}
-
-#app .mx-auto{
-  margin-left: auto;
-  margin-right: auto;
-}
-
-#app .mx-s2{
-  margin-left: 8px;
-  margin-right: 8px;
 }
 
 #app .mr-s4{
@@ -3833,6 +3724,18 @@ video {
   margin-right: 12px;
 }
 
+#app .ml-s7{
+  margin-left: 32px;
+}
+
+#app .ml-s3{
+  margin-left: 12px;
+}
+
+#app .ml-s6{
+  margin-left: 24px;
+}
+
 #app .ml-\[36px\]{
   margin-left: 36px;
 }
@@ -3847,126 +3750,6 @@ video {
 
 #app .mr-\[-2px\]{
   margin-right: -2px;
-}
-
-#app .ml-s2{
-  margin-left: 8px;
-}
-
-#app .mt-s8{
-  margin-top: 40px;
-}
-
-#app .mt-s6{
-  margin-top: 24px;
-}
-
-#app .mt-s4{
-  margin-top: 16px;
-}
-
-#app .mt-s10{
-  margin-top: 64px;
-}
-
-#app .ml-s2{
-  margin-left: 8px;
-}
-
-#app .mt-s8{
-  margin-top: 40px;
-}
-
-#app .mt-s6{
-  margin-top: 24px;
-}
-
-#app .mt-s4{
-  margin-top: 16px;
-}
-
-#app .mt-s10{
-  margin-top: 64px;
-}
-
-#app .ml-s2{
-  margin-left: 8px;
-}
-
-#app .mt-s8{
-  margin-top: 40px;
-}
-
-#app .mt-s6{
-  margin-top: 24px;
-}
-
-#app .mt-s4{
-  margin-top: 16px;
-}
-
-#app .mt-s10{
-  margin-top: 64px;
-}
-
-#app .ml-s2{
-  margin-left: 8px;
-}
-
-#app .mt-s8{
-  margin-top: 40px;
-}
-
-#app .mt-s6{
-  margin-top: 24px;
-}
-
-#app .mt-s4{
-  margin-top: 16px;
-}
-
-#app .mt-s10{
-  margin-top: 64px;
-}
-
-#app .mt-s4{
-  margin-top: 16px;
-}
-
-#app .ml-s2{
-  margin-left: 8px;
-}
-
-#app .mt-s8{
-  margin-top: 40px;
-}
-
-#app .mt-s6{
-  margin-top: 24px;
-}
-
-#app .mt-s10{
-  margin-top: 64px;
-}
-
-#app .mt-s4{
-  margin-top: 16px;
-}
-
-#app .ml-s2{
-  margin-left: 8px;
-}
-
-#app .mt-s8{
-  margin-top: 40px;
-}
-
-#app .mt-s6{
-  margin-top: 24px;
-}
-
-#app .mt-s10{
-  margin-top: 64px;
 }
 
 #app .block{
@@ -4007,10 +3790,6 @@ video {
 
 #app .aspect-\[4\/5\]{
   aspect-ratio: 4/5;
-}
-
-#app .aspect-square{
-  aspect-ratio: 1 / 1;
 }
 
 #app .h-auto{
@@ -4111,10 +3890,6 @@ video {
   height: 538px;
 }
 
-#app .h-\[1px\]{
-  height: 1px;
-}
-
 #app .max-h-\[800px\]{
   max-height: 800px;
 }
@@ -4183,6 +3958,10 @@ video {
   width: min-content;
 }
 
+#app .w-0{
+  width: 0px;
+}
+
 #app .w-1\/2{
   width: 50%;
 }
@@ -4197,10 +3976,6 @@ video {
 
 #app .w-\[10px\]{
   width: 10px;
-}
-
-#app .w-\[460px\]{
-  width: 460px;
 }
 
 #app .w-\[268px\]{
@@ -4233,18 +4008,6 @@ video {
 
 #app .w-\[236px\]{
   width: 236px;
-}
-
-#app .w-full{
-  width: 100%;
-}
-
-#app .w-\[360px\]{
-  width: 360px;
-}
-
-#app .w-full{
-  width: 100%;
 }
 
 #app .max-w-content{
@@ -4311,20 +4074,12 @@ video {
   max-width: 600px;
 }
 
-#app .max-w-content-lg{
-  max-width: 1296px;
-}
-
 #app .flex-1{
   flex: 1 1 0%;
 }
 
 #app .flex-none{
   flex: none;
-}
-
-#app .flex-1{
-  flex: 1 1 0%;
 }
 
 #app .flex-shrink{
@@ -4393,10 +4148,6 @@ video {
 
 #app .grid-cols-3{
   grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
-#app .grid-cols-2{
-  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 #app .flex-col{
@@ -4491,102 +4242,6 @@ video {
   gap: 8px;
 }
 
-#app .gap-s10{
-  gap: 64px;
-}
-
-#app .gap-s3{
-  gap: 12px;
-}
-
-#app .gap-s2{
-  gap: 8px;
-}
-
-#app .gap-s4{
-  gap: 16px;
-}
-
-#app .gap-s10{
-  gap: 64px;
-}
-
-#app .gap-s3{
-  gap: 12px;
-}
-
-#app .gap-s2{
-  gap: 8px;
-}
-
-#app .gap-s4{
-  gap: 16px;
-}
-
-#app .gap-s10{
-  gap: 64px;
-}
-
-#app .gap-s3{
-  gap: 12px;
-}
-
-#app .gap-s2{
-  gap: 8px;
-}
-
-#app .gap-s4{
-  gap: 16px;
-}
-
-#app .gap-s10{
-  gap: 64px;
-}
-
-#app .gap-s3{
-  gap: 12px;
-}
-
-#app .gap-s2{
-  gap: 8px;
-}
-
-#app .gap-s4{
-  gap: 16px;
-}
-
-#app .gap-s10{
-  gap: 64px;
-}
-
-#app .gap-s3{
-  gap: 12px;
-}
-
-#app .gap-s2{
-  gap: 8px;
-}
-
-#app .gap-s4{
-  gap: 16px;
-}
-
-#app .gap-s10{
-  gap: 64px;
-}
-
-#app .gap-s3{
-  gap: 12px;
-}
-
-#app .gap-s2{
-  gap: 8px;
-}
-
-#app .gap-s4{
-  gap: 16px;
-}
-
 #app .gap-y-s7{
   row-gap: 32px;
 }
@@ -4664,16 +4319,16 @@ video {
   border-width: 1px;
 }
 
-#app .border-1{
-  border-width: 1px;
-}
-
 #app .border-t-2{
   border-top-width: 2px;
 }
 
 #app .border-b-1{
   border-bottom-width: 1px;
+}
+
+#app .border-t-\[3px\]{
+  border-top-width: 3px;
 }
 
 #app .border-b-\[1px\]{
@@ -4791,11 +4446,6 @@ video {
   background-color: var(--primary-900);
 }
 
-#app .bg-black-50{
-  --tw-bg-opacity: 1;
-  background-color: rgb(247 247 247 / var(--tw-bg-opacity));
-}
-
 #app .object-contain{
   -o-object-fit: contain;
      object-fit: contain;
@@ -4844,10 +4494,6 @@ video {
 
 #app .p-\[44px\]{
   padding: 44px;
-}
-
-#app .p-s4{
-  padding: 16px;
 }
 
 #app .py-s4{
@@ -5010,66 +4656,6 @@ video {
   padding-right: 27px;
 }
 
-#app .px-72{
-  padding-left: 72px;
-  padding-right: 72px;
-}
-
-#app .py-s7{
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
-
-#app .px-72{
-  padding-left: 72px;
-  padding-right: 72px;
-}
-
-#app .py-s7{
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
-
-#app .px-72{
-  padding-left: 72px;
-  padding-right: 72px;
-}
-
-#app .py-s7{
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
-
-#app .px-72{
-  padding-left: 72px;
-  padding-right: 72px;
-}
-
-#app .py-s7{
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
-
-#app .px-72{
-  padding-left: 72px;
-  padding-right: 72px;
-}
-
-#app .py-s7{
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
-
-#app .px-72{
-  padding-left: 72px;
-  padding-right: 72px;
-}
-
-#app .py-s7{
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
-
 #app .pb-s14{
   padding-bottom: 160px;
 }
@@ -5178,80 +4764,12 @@ video {
   padding-bottom: 80px;
 }
 
+#app .pl-s7{
+  padding-left: 32px;
+}
+
 #app .pb-\[2px\]{
   padding-bottom: 2px;
-}
-
-#app .pb-s12{
-  padding-bottom: 96px;
-}
-
-#app .pt-s6{
-  padding-top: 24px;
-}
-
-#app .pb-s7{
-  padding-bottom: 32px;
-}
-
-#app .pb-s12{
-  padding-bottom: 96px;
-}
-
-#app .pt-s6{
-  padding-top: 24px;
-}
-
-#app .pb-s7{
-  padding-bottom: 32px;
-}
-
-#app .pb-s12{
-  padding-bottom: 96px;
-}
-
-#app .pt-s6{
-  padding-top: 24px;
-}
-
-#app .pb-s7{
-  padding-bottom: 32px;
-}
-
-#app .pb-s12{
-  padding-bottom: 96px;
-}
-
-#app .pt-s6{
-  padding-top: 24px;
-}
-
-#app .pb-s7{
-  padding-bottom: 32px;
-}
-
-#app .pb-s12{
-  padding-bottom: 96px;
-}
-
-#app .pt-s6{
-  padding-top: 24px;
-}
-
-#app .pb-s7{
-  padding-bottom: 32px;
-}
-
-#app .pb-s12{
-  padding-bottom: 96px;
-}
-
-#app .pt-s6{
-  padding-top: 24px;
-}
-
-#app .pb-s7{
-  padding-bottom: 32px;
 }
 
 #app .text-left{
@@ -5387,163 +4905,12 @@ video {
   color: var(--primary-700);
 }
 
-#app .text-primary-900{
-  color: var(--primary-900);
+#app .text-primary-400{
+  color: var(--primary-400);
 }
 
-#app .text-black-400{
-  --tw-text-opacity: 1;
-  color: rgb(157 157 157 / var(--tw-text-opacity));
-}
-
-#app .text-red-500{
-  --tw-text-opacity: 1;
-  color: rgb(202 0 61 / var(--tw-text-opacity));
-}
-
-#app .text-black-700{
-  --tw-text-opacity: 1;
-  color: rgb(83 83 83 / var(--tw-text-opacity));
-}
-
-#app .text-black-800{
-  --tw-text-opacity: 1;
-  color: rgb(59 59 59 / var(--tw-text-opacity));
-}
-
-#app .text-primary-900{
-  color: var(--primary-900);
-}
-
-#app .text-black-400{
-  --tw-text-opacity: 1;
-  color: rgb(157 157 157 / var(--tw-text-opacity));
-}
-
-#app .text-red-500{
-  --tw-text-opacity: 1;
-  color: rgb(202 0 61 / var(--tw-text-opacity));
-}
-
-#app .text-black-700{
-  --tw-text-opacity: 1;
-  color: rgb(83 83 83 / var(--tw-text-opacity));
-}
-
-#app .text-black-800{
-  --tw-text-opacity: 1;
-  color: rgb(59 59 59 / var(--tw-text-opacity));
-}
-
-#app .text-primary-900{
-  color: var(--primary-900);
-}
-
-#app .text-black-400{
-  --tw-text-opacity: 1;
-  color: rgb(157 157 157 / var(--tw-text-opacity));
-}
-
-#app .text-red-500{
-  --tw-text-opacity: 1;
-  color: rgb(202 0 61 / var(--tw-text-opacity));
-}
-
-#app .text-black-700{
-  --tw-text-opacity: 1;
-  color: rgb(83 83 83 / var(--tw-text-opacity));
-}
-
-#app .text-black-800{
-  --tw-text-opacity: 1;
-  color: rgb(59 59 59 / var(--tw-text-opacity));
-}
-
-#app .text-black-200{
-  --tw-text-opacity: 1;
-  color: rgb(206 206 206 / var(--tw-text-opacity));
-}
-
-#app .text-primary-900{
-  color: var(--primary-900);
-}
-
-#app .text-black-400{
-  --tw-text-opacity: 1;
-  color: rgb(157 157 157 / var(--tw-text-opacity));
-}
-
-#app .text-red-500{
-  --tw-text-opacity: 1;
-  color: rgb(202 0 61 / var(--tw-text-opacity));
-}
-
-#app .text-black-700{
-  --tw-text-opacity: 1;
-  color: rgb(83 83 83 / var(--tw-text-opacity));
-}
-
-#app .text-black-800{
-  --tw-text-opacity: 1;
-  color: rgb(59 59 59 / var(--tw-text-opacity));
-}
-
-#app .text-black-200{
-  --tw-text-opacity: 1;
-  color: rgb(206 206 206 / var(--tw-text-opacity));
-}
-
-#app .text-black-400{
-  --tw-text-opacity: 1;
-  color: rgb(157 157 157 / var(--tw-text-opacity));
-}
-
-#app .text-primary-900{
-  color: var(--primary-900);
-}
-
-#app .text-red-500{
-  --tw-text-opacity: 1;
-  color: rgb(202 0 61 / var(--tw-text-opacity));
-}
-
-#app .text-black-700{
-  --tw-text-opacity: 1;
-  color: rgb(83 83 83 / var(--tw-text-opacity));
-}
-
-#app .text-black-800{
-  --tw-text-opacity: 1;
-  color: rgb(59 59 59 / var(--tw-text-opacity));
-}
-
-#app .text-black-200{
-  --tw-text-opacity: 1;
-  color: rgb(206 206 206 / var(--tw-text-opacity));
-}
-
-#app .text-black-400{
-  --tw-text-opacity: 1;
-  color: rgb(157 157 157 / var(--tw-text-opacity));
-}
-
-#app .text-primary-900{
-  color: var(--primary-900);
-}
-
-#app .text-red-500{
-  --tw-text-opacity: 1;
-  color: rgb(202 0 61 / var(--tw-text-opacity));
-}
-
-#app .text-black-700{
-  --tw-text-opacity: 1;
-  color: rgb(83 83 83 / var(--tw-text-opacity));
-}
-
-#app .text-black-800{
-  --tw-text-opacity: 1;
-  color: rgb(59 59 59 / var(--tw-text-opacity));
+#app .text-primary-500{
+  color: var(--primary-500);
 }
 
 #app .underline{
@@ -5643,8 +5010,8 @@ video {
   transition-duration: 150ms;
 }
 
-#app .transition-left{
-  transition-property: left;
+#app .transition-opacity{
+  transition-property: opacity;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -5707,9 +5074,19 @@ video {
   color: var(--secondary-400);
 }
 
+#app .hover\:text-black-400:hover{
+  --tw-text-opacity: 1;
+  color: rgb(157 157 157 / var(--tw-text-opacity));
+}
+
 #app .hover\:text-black-600:hover{
   --tw-text-opacity: 1;
   color: rgb(108 108 108 / var(--tw-text-opacity));
+}
+
+#app .hover\:text-black-500:hover{
+  --tw-text-opacity: 1;
+  color: rgb(132 132 132 / var(--tw-text-opacity));
 }
 
 #app .hover\:text-primary-600:hover{
@@ -5722,31 +5099,6 @@ video {
 
 #app .hover\:text-primary-700:hover{
   color: var(--primary-700);
-}
-
-#app .hover\:text-black-600:hover{
-  --tw-text-opacity: 1;
-  color: rgb(108 108 108 / var(--tw-text-opacity));
-}
-
-#app .hover\:text-black-400:hover{
-  --tw-text-opacity: 1;
-  color: rgb(157 157 157 / var(--tw-text-opacity));
-}
-
-#app .hover\:text-black-600:hover{
-  --tw-text-opacity: 1;
-  color: rgb(108 108 108 / var(--tw-text-opacity));
-}
-
-#app .hover\:text-black-400:hover{
-  --tw-text-opacity: 1;
-  color: rgb(157 157 157 / var(--tw-text-opacity));
-}
-
-#app .hover\:text-black-600:hover{
-  --tw-text-opacity: 1;
-  color: rgb(108 108 108 / var(--tw-text-opacity));
 }
 
 #app .disabled\:invisible:disabled{
@@ -5772,6 +5124,11 @@ video {
 
 #app .group:hover .group-hover\:text-primary-700{
   color: var(--primary-700);
+}
+
+#app .group:hover .group-hover\:text-black-500{
+  --tw-text-opacity: 1;
+  color: rgb(132 132 132 / var(--tw-text-opacity));
 }
 
 @media (min-width: 560px){
@@ -5837,10 +5194,6 @@ video {
     margin-top: -56px;
   }
 
-  #app .md\:flex{
-    display: flex;
-  }
-
   #app .md\:hidden{
     display: none;
   }
@@ -5869,6 +5222,10 @@ video {
     width: 100%;
   }
 
+  #app .md\:w-\[360px\]{
+    width: 360px;
+  }
+
   #app .md\:w-\[382px\]{
     width: 382px;
   }
@@ -5883,10 +5240,6 @@ video {
 
   #app .md\:w-\[1px\]{
     width: 1px;
-  }
-
-  #app .md\:w-\[360px\]{
-    width: 360px;
   }
 
   #app .md\:max-w-\[768px\]{
@@ -5976,10 +5329,6 @@ video {
   #app .md\:pt-s13{
     padding-top: 120px;
   }
-
-  #app .md\:pb-s13{
-    padding-bottom: 120px;
-  }
 }
 
 @media (min-width: 1024px){
@@ -5989,6 +5338,10 @@ video {
 
   #app .lg\:mt-s12{
     margin-top: 96px;
+  }
+
+  #app .lg\:ml-s3{
+    margin-left: 12px;
   }
 
   #app .lg\:flex{
