--- a/snippets/24-menu-8.liquid
+++ b/snippets/24-menu-8.liquid
@@ -1,3 +1,6 @@
-<svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-<path d="M2.25 3H23.25M2.25 12H23.25M2.25 21H23.25" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+<svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="{{ class }}">
+  <path d="M2.25 3L23.25 3" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="top"/>
+  <path d="M2.25 12L23.25 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mid1"/>
+  <path d="M2.25 12L23.25 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mid2"/>
+  <path d="M2.25 21L23.25 21" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="bot"/>
 </svg>
