--- a/css/rich-text.css
+++ b/css/rich-text.css
@@ -85,6 +85,6 @@
     @apply text-center;
 }
 
-.inline-link{
-    @apply text-primary-500 hover:text-primary-500 underline;
+.rich-text a, .inline-link{
+    @apply text-primary-500 hover:text-primary-600 underline;
 }
