--- a/sections/navigation.liquid
+++ b/sections/navigation.liquid
@@ -4,7 +4,7 @@
 <nav class="px-s5 px-36 xl:px-72">
   <div class="nav-wrapper">
     <button class="mobile-toggle flex-1 lg:hidden" onclick="body.classList.toggle('nav-active')">
-      {% render '24-menu-8' %}
+      {% render '24-menu-8', class: "text-black-400" %}
     </button>
     <div class="nav-primary container search-hide to-lg:flex-col z-10">
       <ul class="to-lg:flex-1 lg:flex list-none accordion-items accordion">
@@ -13,9 +13,9 @@
           <li id="navLevel1Item{{ forloop.index }}" class="menu__item level--1 has-children ui-base accordion__item group to-lg:border-b-[1px] to-lg:border-black-50">
             <a aria-controls="accordionContent{{ forloop.index }}" id="accordionBtn{{ forloop.index }}" class="menu__link accordion__trigger">
               <span class="to-lg:hidden transition-all duration-300 group-hover:text-secondary-500">{{ menuItem | capitalize }}</span>
-              <span class="lg:hidden faux-p-lg transition-all group-hover:text-secondary-500">{{ menuItem | capitalize }}</span>
+              <span class="lg:hidden faux-p-lg transition-all text-black-900 group-hover:text-secondary-500">{{ menuItem | capitalize }}</span>
               {% render '12-down', class: "text-primary-100 ml-s2 transition-all group-hover:rotate-[180deg] group-hover:text-secondary-500 to-lg:hidden" %}
-              {% render '24-plus', class: "text-primary-100 ml-s2 transition-all group-hover:text-secondary-500 lg:hidden" %}
+              {% render '24-plus', class: "mobile text-primary-100 ml-s2 transition-all group-hover:text-secondary-500 lg:hidden" %}
             </a>
             <div id="accordionContent{{ forloop.index }}" aria-labelledby="accordionBtn{{ forloop.index }}" class="menu__dropdown accordion__content-wrapper content-dependant group-hover:block">
               <div class="menu__columns">
@@ -65,37 +65,51 @@
           </li>
         {% endfor %}
       </ul>
-      <div class="flex gap-s5 p-s5 mt-s8 lg:hidden">
-        <div class="flex-1 flex items-end p-s5 h-[240px] bg-black-50">
+      <button class="btn btn--outlined w-max mx-auto mt-s12 shrink-0 lg:hidden">All Products</button>
+      <div class="flex gap-s5 px-s5 mt-s8 lg:hidden">
+        <div class="flex-1 flex items-end p-s2 h-[240px] bg-black-50">
           <button class="btn w-full z-auto ">Women</button>
+        </div>
+        <div class="flex-1 flex items-end p-s2 h-[240px] bg-black-50">
+          <button class="btn w-full z-auto ">Kids</button>
         </div>
       </div>
       <div class="w-full flex justify-between px-s5 py-s7 mt-s10 bg-white lg:hidden">
         <div class="flex gap-s5">
-          <a href="{{ settings.social_facebook_link }}">{% render '16-logo-facebook-simple' %}</a>
-          <a href="{{ settings.social_twitter_link }}">{% render '16-logo-twitter' %}</a>
-          <a href="{{ settings.social_linkedin_link }}">{% render '16-logo-linkedin-simple' %}</a>
+          <a href="{{ settings.social_facebook_link }}" class="text-black-400 hover:text-black-500 transition-all">{% render '16-logo-facebook-simple' %}</a>
+          <a href="{{ settings.social_twitter_link }}" class="text-black-400 hover:text-black-500 transition-all">{% render '16-logo-twitter' %}</a>
+          <a href="{{ settings.social_linkedin_link }}" class="text-black-400 hover:text-black-500 transition-all">{% render '16-logo-linkedin-simple' %}</a>
         </div>
         <div>
-          <a href="/pages/help-and-faqs">Help + FAQs</a>
+          <a href="/pages/help-and-faqs" class="text-black-400 hover:text-black-500 transition-all">Help + FAQs</a>
         </div>
       </div>
     </div>
-    <a href="/" class="to-md:hidden search-hide">
+    <a href="/" class="to-md:hidden search-hide search-hide-mobile">
       <img class=" w-[300px] xl:w-[350px] " src="{{ 'Logo-Wharf-Horizontal.svg' | asset_url }}" alt="The Wharf Store" width="350" height="35" loading="lazy"/>
     </a>
-    <a href="/" class="md:hidden search-hide">
+    <a href="/" class="md:hidden search-hide-mobile">
       <img class="w-[150px]" src="{{ 'Logo-Wharf-Stacked.svg' | asset_url }}" alt="The Wharf Store" width="150" height="80" loading="lazy"/>
     </a>
-    <div class="flex-1 flex justify-end items-center">
-      <div class="p-s2 search flex to-lg:hidden">
+    <div class="p-s2 search-mobile flex-1 items-center hidden">
+      <input class="search-input bg-transparent outline-none flex-1 ml-s6 faux-p-lg text-black-900" placeholder="Search the shop" value="{% if search %}{{search.terms}}{% endif %}"/>
+      <button id="searchButton" class="search-submit">
+        {% render '24-search', class: "text-black-400 hover:text-black-500" %}
+      </button>
+    </div>
+    <div class="buttons flex-1 flex justify-end items-center">
+      <div class="p-s2 search items-center flex hidden lg:flex">
         <button id="searchButton" onclick="toggleSearchMode();">
           {% render '24-search', class: "text-primary-800 hover:text-primary-600" %}
         </button>
-        <input class="search-input bg-transparent" placeholder="Search the shop" value="{% if search %}{{search.terms}}{% endif %}"/>
+        <input class="search-input bg-transparent outline-none text-black-900 faux-p-lg" placeholder="Search the shop" value="{% if search %}{{search.terms}}{% endif %}"/>
+        <button id="searchCloseButton" onclick="toggleSearchMode()" class="absolute right-s2 opacity-0 w-0 overflow-hidden transition-all">
+          {% render '12-close', class: "text-black-400" %}
+        </button>
       </div>
-      <a href="{{ routes.cart_url }}" id="cart-icon-bubble" class="search-hide relative p-s2 ml-s5 cart-notification group">
-        {% render '24-shopping-cart', class: "text-primary-800 group-hover:text-primary-700" %}
+      <a href="{{ routes.cart_url }}" id="cart-icon-bubble" class="search-hide relative p-s2 ml-s2 lg:ml-s3 cart-notification group">
+        {% render '24-shopping-cart', class: "text-primary-800 group-hover:text-primary-700 to-lg:hidden" %}
+        {% render '24-shopping-cart', class: "text-black-400 group-hover:text-black-500 lg:hidden" %}
         {% assign cart_count = cart.items | size %}
         {% if cart_count > 0 %}
           <div class="absolute top-0 right-0 w-s5 h-s5 flex justify-center items-center bg-secondary-500 rounded-full">
