--- a/snippets/12-close.liquid
+++ b/snippets/12-close.liquid
@@ -1,3 +1,3 @@
-<svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-<path d="M4.00024 19.9999L20.0001 4M20 20L4.00012 4.00011" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+<svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="{{ class }}">
+  <path d="M4.00024 19.9999L20.0001 4M20 20L4.00012 4.00011" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
 </svg>
