--- a/snippets/24-plus.liquid
+++ b/snippets/24-plus.liquid
@@ -1,3 +1,4 @@
 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="{{ class }}">
-  <path d="M12 3V21M21 12H3" stroke="currentColor" stroke-width="2" stroke-miterlimit="10" stroke-linecap="square"/>
+  <path d="M12 3L12 21" stroke="currentColor" stroke-width="2" stroke-miterlimit="10" stroke-linecap="square" class="vert"/>
+  <path d="M21 12H3" stroke="currentColor" stroke-width="2" stroke-miterlimit="10" stroke-linecap="square" class="horiz"/>
 </svg>
